fix tamo login dark mode, add detailed error message

--- a/static/style.css
+++ b/static/style.css
@@ -29,6 +29,19 @@ body {
         color: #f5f5f5 !important;
         transition: 0.3s;
     }
+
+    input[type="submit"] {
+        background: #3f3f3f !important;
+    }
+
+    input[type="submit"]:hover {
+        background-color: #4f4f4f !important;
+        transition: 0.3s;
+    }
+
+    input[type="submit"]:disabled {
+        background-color: #4f4f4f !important;
+    }
 }
 
 .content {
